force-app/main/default/objects/Forecast_Cube_2__c/Forecast_Cube_2__c.object-meta.xml
<CustomObject>
    <description>Use as a temp object to store data before be shown on a custom report</description>
    <label>Forecast Cube#2</label>
    <nameField>
        <displayFormat>CUBE2-{0000000000}</displayFormat>
        <label>Forecast Cube#2 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Cube#2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>