force-app/main/default/objects/Forecast_Cube_2__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast Cube#2s</relationshipLabel>
    <relationshipName>Forecast_Cube_2s</relationshipName>
    <type>Lookup</type>
</CustomField>