force-app/main/default/objects/Forecast_Cube_2__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIIc</fullName>
            </value>
            <value>
                <fullName>NIId</fullName>
            </value>
            <value>
                <fullName>AS Fee</fullName>
            </value>
            <value>
                <fullName>BA Fee</fullName>
            </value>
            <value>
                <fullName>Credit Fee</fullName>
            </value>
            <value>
                <fullName>Derivative Fee</fullName>
            </value>
            <value>
                <fullName>FX Fee</fullName>
            </value>
            <value>
                <fullName>IB Fee</fullName>
            </value>
            <value>
                <fullName>L/G Fee</fullName>
            </value>
            <value>
                <fullName>TF Fee</fullName>
            </value>
            <value>
                <fullName>MF Fee</fullName>
            </value>
            <value>
                <fullName>AL Fee</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>EDC Fee</fullName>
            </value>
            <value>
                <fullName>Fleet Fee</fullName>
            </value>
            <value>
                <fullName>Direct CM Fee</fullName>
            </value>
            <value>
                <fullName>Front End Fee</fullName>
            </value>
            <value>
                <fullName>Other CM Fee</fullName>
            </value>
            <value>
                <fullName>Cash Fee</fullName>
                <isActive>false</isActive>
                <label>Cash Fee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>