force-app/main/default/objects/Forecast_Cube_2__c/fields/NI_01__c.field-meta.xml
<CustomField>
    <fullName>NI_01__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NI:Jan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>